web files structure added

--- a/firebase/index.html
+++ b/firebase/index.html
@@ -84,6 +84,35 @@ firebaseRef.orderByChild("estacion").on("child_added", function(snapshot) {
 /*
 
 http://leafletjs.com/
+== Estrcutura WEB == 
+
+
+1. Plaza de España (28079004.html)
+2. Escuelas Aguirre (28079008.html)
+3. Ramón y Cajal (28079011.html)
+4. Arturo Soria (28079016.html)
+5. Villaverde (28079017.html)
+6. Farolillo (28079018.html)
+7. Casa de Campo (28079024.html)
+8. Barajas Pueblo (28079027.html)
+9. Plaza del Carmen (28079035.html)
+10. Moratalaz (28079036.html)
+11. Cuatro Caminos (28079038.html)
+12. Barrio del Pilar (28079039.html)
+13. Vallecas (28079040.html)
+14. Méndez Alvaro (28079047.html) ** 
+15. Castellana (28079048.html)
+16. Parque del Retiro (28079049.html)
+17. Plaza Castilla (28079050.html)
+18. Ensanche de Vallecas (28079054.html)
+19. Urbanización Embajada (28079055.html)
+20. Plaza Fernández Ladreda (28079056.html)
+21. Sanchinarro (28079057.html)
+22. El Pardo (28079058.html)
+23. Juan Carlos I (28079059.html)
+24. Tres Olivos (28079060.html) **
+
+
  == ESTACIONES ==
 
 0-22 Media de la Red
@@ -101,7 +130,7 @@ http://leafletjs.com/
 136-142 Barrio del Pilar
 143-149 Vallecas
 150-155 Méndez Álvaro
-156-161 Pza Castellana
+156-161 Castellana
 162-166 Retiro
 167-173 Pza. Castilla
 174-183 Ensanche de Vallecas
@@ -332,7 +361,7 @@ http://leafletjs.com/
 155 - Temperatura Mínima (TMI)
 ===========================
 
-156-161 Pza Castellana
+156-161 Castellana
 ---------------------------
 156 - Monóxido de Nitrógeno (NO)
 157 - Dióxido de Nitrógeno (NO2)
