--- a/firebase/agradecimientos.html
+++ b/firebase/agradecimientos.html
@@ -73,8 +73,13 @@
 
 <!-- 2.1 Contenido Cabecera  -->  
       <div class="page-header">
-        <h1>Arturo Soria <small>Calidad del Aire</small></h1>
+        <h1>Agradecimientos <small>Calidad del Aire</small></h1>
       </div>
+      
+      <!-- 
+          https://www.flickr.com/photos/valento/7734618560/in/photolist-4Ps55f-8VftNh-rRxwVA-cMtWCq-twn89q-pNunmH-pemSEF-pwjMQC-e3BmpM-4BcM7U-7e93ua-6PV6JK-bQTKGD-4DwWcf-aQdR9i-fYVPZY-aQdNGF-9dMTw1-4GmyF6-7Xjokb-4ZaCga-7Lhoju-n6AeRK-n4Vhid-n4Z7Jf-n6AcCi-7nvaY4-5FPz1L-6CKnLg-5RG2v8-5RG2ZM-64REW3-9Dgqed-bt1PTu-p2u6Bu-oxw7yC-ce1mj5-r8nGyg-6rKKGj-qkQxZ-enD8Jc-EGj3j-autCXK-6N8cb5-6N41h2-6YmMLG-6KUz9e-tjFqHt-HVj6e-HV7FC
+          Cuatro torres de Valentina Roldán
+      --> 
 
       <div class="row"> 
       </div>
