--- a/firebase/sobre.html
+++ b/firebase/sobre.html
@@ -73,7 +73,7 @@
 
 <!-- 2.1 Contenido Cabecera  -->  
       <div class="page-header">
-        <h1>Arturo Soria <small>Calidad del Aire</small></h1>
+        <h1>Sobre <small>Calidad del Aire</small></h1>
       </div>
 
       <div class="row"> 
