Estacion 4, Plaza España (28079004) full added

--- a/firebase/index.html
+++ b/firebase/index.html
@@ -92,9 +92,9 @@
      
     <div class="container container-principal">
 
-<!-- VERSION DESAROLLO -->    
+<!-- VERSION DESAROLLO
     <div class="alert alert-danger" role="alert">ESTAMOS AUN EN DESAROLLO! Se paciente... :-)</div>
-
+ -->    
 
 <!-- 2.1 Contenido Cabecera  -->  
       <div class="page-header">
@@ -839,6 +839,9 @@
 
    // CartoDB Map
 cartodb.createVis('map', 'https://ulisesgascongonzalez.cartodb.com/api/v2/viz/3c798d44-2ea4-11e5-a934-0e853d047bba/viz.json');
+
+
+
 /* 
     - INICIO - Gestion del tiempo 
 */
