Estacion 35, Pza del Carmen (28079035) full added

--- a/firebase/28079027.html
+++ b/firebase/28079027.html
@@ -660,44 +660,25 @@ myFirebaseRef.on("value", function(snapshot) {
 /*
 == MEDIDAS ==
 
-83-105 Casa de Campo
+106-110 Barajas 
 ---------------------------
-83 - Dióxido de Azufre (S02)
-84 - Monóxido de Carbono (CO)
-85 - Monóxido de Nitrógeno (NO)
-86 - Dióxido de Nitrógeno (NO2)
-87 - Partículas en suspensión (<2.5)
-88 - Partículas en suspensión (<10)
-89 - Óxidos de Nitrógeno totales (NOx)
-90 - Ozono (O3)
-91 - Tolueno (TOL)
-92 - Benceno (C6H6)
-93 - Etilbenceno (EBE)
-94 - Hidrocarburos Totales (HC)
-95 - Metano (CH4)
-96 - Hidrocarburos No Metánicos (NMH)
-97 - Radiación Ultravioleta (UV)
-98 - Velocidad del Viento (VV)
-99 - Dirección del Viento (DD)
-100 - Temperatura Media (TMP)
-101 - Temperatura Mínima (TMI)
-102 - Humedad Relativa (HR)
-103 - Presión Barométrica (PRB)
-104 - 88 Precipitacion?????????????
-105 - 89 Precipitacion?????????????
+106 - Monóxido de Nitrógeno (NO)
+107 - Dióxido de Nitrógeno (NO2)
+108 - Óxidos de Nitrógeno totales (NOx)
+109 - Ozono (O3)
+
+110 - Temperatura Mínima (TMI)
 ===========================
 
-
-Casa de Campo
-- img: http://www.mambiente.munimadrid.es/opencms/export/sites/default/calaire/imagenes/foto-estacion24.jpg
-- Código: 28079024
-- Dirección: Casa de Campo. Terminal del Teleférico
-- Estación: 24
-- Longitud: 3º 44' 50,44'' W
-- Latitud: 40º 25' 09,68'' N
-- Altitud: 645 m.
-- Link: http://www.mambiente.munimadrid.es/opencms/opencms/calaire/contenidos/estaciones/estacion24.html
-
+Barajas
+- img: http://www.mambiente.munimadrid.es/opencms/export/sites/default/calaire/imagenes/foto-estacion27.jpg
+- Código: 28079027
+- Dirección:  C/ Júpiter, 21
+- Estación: 27
+- Longitud: 3º 34' 48,10'' W
+- Latitud: 40º 28' 36,94'' N
+- Altitud: 631 mts
+- Link: http://www.mambiente.munimadrid.es/opencms/opencms/calaire/contenidos/estaciones/estacion27.html
 
 */        
         
