Estacion 36, Moratalaz (28079036) full added & typo

--- a/firebase/28079018.html
+++ b/firebase/28079018.html
@@ -62,7 +62,7 @@
                 <li><a href="28079017.html">Villaverde</a></li>
                 <li><a href="28079018.html">Farolillo</a></li>
                 <li><a href="28079024.html">Casa de Campo</a></li>                
-                <li><a href="28079027.html">Barajas (Pueblo)</a></li>                
+                <li><a href="28079027.html">Barajas </a></li>                
                 <li><a href="28079035.html">Plaza del Carmen</a></li>
                 <li><a href="28079036.html">Moratalaz</a></li>
                 <li><a href="28079038.html">Cuatro Caminos</a></li>                
@@ -188,12 +188,12 @@
                         <p><a href="28079011.html">Ramón y Cajal</a></p>
                         <p><a href="28079016.html">Arturo Soria</a></p>
                         <p><a href="28079017.html">Villaverde</a></p>
-                        <p><a href="28079018.html">Faropllo</a></p>
+                        <p><a href="28079018.html">farolillo</a></p>
                          
                   </div>
                   <div class="col-lg-3"> 
                         <p><a href="28079024.html">Casa de Campo</a></p>                
-                        <p><a href="28079027.html">Barajas (Pueblo)</a></p>                
+                        <p><a href="28079027.html">Barajas </a></p>                
                         <p><a href="28079035.html">Plaza del Carmen</a></p>
                         <p><a href="28079036.html">Moratalaz</a></p>
                         <p><a href="28079038.html">Cuatro Caminos</a></p>                
