--- a/firebase/index.html
+++ b/firebase/index.html
@@ -62,7 +62,7 @@
                 <li><a href="28079017.html">Villaverde</a></li>
                 <li><a href="28079018.html">Farolillo</a></li>
                 <li><a href="28079024.html">Casa de Campo</a></li>                
-                <li><a href="28079027.html">Barajas (Pueblo)</a></li>                
+                <li><a href="28079027.html">Barajas </a></li>                
                 <li><a href="28079035.html">Plaza del Carmen</a></li>
                 <li><a href="28079036.html">Moratalaz</a></li>
                 <li><a href="28079038.html">Cuatro Caminos</a></li>                
@@ -191,12 +191,12 @@
                 <p><a href="28079011.html">Ramón y Cajal</a></p>
                 <p><a href="28079016.html">Arturo Soria</a></p>
                 <p><a href="28079017.html">Villaverde</a></p>
-                <p><a href="28079018.html">Faropllo</a></p>
+                <p><a href="28079018.html">farolillo</a></p>
                  
           </div>
           <div class="col-lg-2"> 
                 <p><a href="28079024.html">Casa de Campo</a></p>                
-                <p><a href="28079027.html">Barajas (Pueblo)</a></p>                
+                <p><a href="28079027.html">Barajas </a></p>                
                 <p><a href="28079035.html">Plaza del Carmen</a></p>
                 <p><a href="28079036.html">Moratalaz</a></p>
                 <p><a href="28079038.html">Cuatro Caminos</a></p>                
@@ -1460,7 +1460,7 @@ Presión Barométrica (PRB):
 5. Villaverde (28079017.html)
 6. Farolillo (28079018.html)
 7. Casa de Campo (28079024.html)
-8. Barajas Pueblo (28079027.html)
+8. Barajas (28079027.html)
 9. Plaza del Carmen (28079035.html)
 10. Moratalaz (28079036.html)
 11. Cuatro Caminos (28079038.html)
@@ -1489,7 +1489,7 @@ Presión Barométrica (PRB):
 62-67 Villaverde Alto
 68-80 Farolillo
 81-103 Casa de Campo
-104-108 Barajas Pueblo ----
+104-108 Barajas ----
 109-115 Pza Carmen
 116-123 Moratalaz
 124-135 Cuatro Caminos
@@ -1649,7 +1649,7 @@ Presión Barométrica (PRB):
 105 - 89 Precipitacion?????????????
 ===========================
 
-106-110 Barajas Pueblo ----
+106-110 Barajas ----
 ---------------------------
 106 - Monóxido de Nitrógeno (NO)
 107 - Dióxido de Nitrógeno (NO2)
@@ -1976,7 +1976,7 @@ Casa de Campo
 - Altitud: 645 m.
 - Link: http://www.mambiente.munimadrid.es/opencms/opencms/calaire/contenidos/estaciones/estacion24.html
 
-Barajas Pueblo
+Barajas
 - img: http://www.mambiente.munimadrid.es/opencms/export/sites/default/calaire/imagenes/foto-estacion27.jpg
 - Código: 28079027
 - Dirección:  C/ Júpiter, 21
