Pre-Beta version ready. Also issues solved : Responsive, data cahange, etc...

--- a/firebase/28079050.html
+++ b/firebase/28079050.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
@@ -144,23 +145,23 @@ NOKey = "169/";
 NO2Enable = true;
 NO2Key = "170/";
 // Partículas en suspensión (<2.5)
-PS25Enable = true;
-PS25Key = "171/";
+PS25Enable = false; // eliminado el 26/07/2015
+//PS25Key = "171/";
 // Partículas en suspensión (<10)
-PS10Enable = true;
-PS10Key = "172/";
+PS10Enable = false; // eliminado el 26/07/2015
+//PS10Key = "172/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "173/";
+NOXKey = "171/";
 
 /* ParametrosMetereologicos */
 
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "174/";
+TMPKey = "172/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "175/";
+TMIKey = "173/";
 
 getEstationInfo();
 getEstationtemplate();
