--- a/firebase/28079054.html
+++ b/firebase/28079054.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
@@ -139,34 +140,34 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "176/";
+NOKey = "174/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "177/";
+NO2Key = "175/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "178/";
+NOXKey = "176/";
 // Ozono (O3)
 O3Enable = true;
-O3Key = "179/";
+O3Key = "177/";
 
 /* ParametrosMetereologicos */
 
 // Radiación Ultravioleta (UV)
 UVEnable = true;
-UVKey = "180/";
+UVKey = "178/";
 // Velocidad del Viento (VV)
 VVEnable = true;
-VVKey = "181/";
+VVKey = "179/";
 // Dirección del Viento (DD)
 DDEnable = true;
-DDKey = "182/";
+DDKey = "180/";
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "183/";
+TMPKey = "181/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "184/";
+TMIKey = "182/";
 
 getEstationInfo();
 getEstationtemplate();
