--- a/firebase/28079055.html
+++ b/firebase/28079055.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
@@ -139,40 +140,40 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "186/";
+NOKey = "184/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "187/";
+NO2Key = "185/";
 // Partículas en suspensión (<10)
 PS10Enable = true;
-PS10Key = "188/";
+PS10Key = "186/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "189/";
+NOXKey = "187/";
 // Tolueno (TOL)
 TOLEnable = true;
-TOLKey = "190/";
+TOLKey = "188/";
 // Benceno (C6H6)
 BENEnable = true;
-BENKey = "191/";
+BENKey = "189/";
 // Etilbenceno (EBE)
 EBEEnable = true;
-EBEKey = "192/";
+EBEKey = "190/";
 // Hidrocarburos Totales (HC)
 HCEnable = true;
-HCKey = "193/";
+HCKey = "191/";
 // Metano (CH4)
 CH4Enable = true;
-CH4Key = "194/";
+CH4Key = "192/";
 // Hidrocarburos No Metánicos (NMH)
 NMHEnable = true;
-NMHKey = "195/";
+NMHKey = "193/";
 
 /* ParametrosMetereologicos */
 
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "196/";
+TMIKey = "194/";
 
 getEstationInfo();
 getEstationtemplate();
