--- a/firebase/28079056.html
+++ b/firebase/28079056.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
@@ -139,37 +140,37 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Carbono (CO)
 COEnable = true;
-COKey = "197/";
+COKey = "195/";
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "198/";
+NOKey = "196/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "199/";
+NO2Key = "197/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "200/";
+NOXKey = "198/";
 // Ozono (O3)
 O3Enable = true;
-O3Key = "201/";
+O3Key = "199/";
 
 /* ParametrosMetereologicos */
 
 // Velocidad del Viento (VV)
 VVEnable = true;
-VVKey = "202/";
+VVKey = "200/";
 // Dirección del Viento (DD)
 DDEnable = true;
-DDKey = "203/";
+DDKey = "201/";
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "204/";
+TMPKey = "202/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "205/";
+TMIKey = "203/";
 // Humedad Relativa (HR)
 HREnable = true;
-HRKey = "206/";
+HRKey = "204/";
 
 getEstationInfo();
 getEstationtemplate();
