--- a/firebase/28079057.html
+++ b/firebase/28079057.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
@@ -139,31 +140,31 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Dióxido de Azufre (S02) 
 SO2Enable = true;
-SO2Key = "208/"; // LIKE -> "1/"
+SO2Key = "206/"; // LIKE -> "1/"
 // Monóxido de Carbono (CO)
 COEnable = true;
-COKey = "209/";
+COKey = "207/";
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "210/";
+NOKey = "208/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "211/";
+NO2Key = "209/";
 // Partículas en suspensión (<10)
 PS10Enable = true;
-PS10Key = "212/";
+PS10Key = "210/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "213/";
+NOXKey = "211/";
 
 /* ParametrosMetereologicos */
 
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "214/";
+TMPKey = "212/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "215/";
+TMIKey = "213/";
 
 getEstationInfo();
 getEstationtemplate();
