--- a/firebase/28079058.html
+++ b/firebase/28079058.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
@@ -139,23 +140,22 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "216/";
+NOKey = "214/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "217/";
+NO2Key = "215/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "218/";
+NOXKey = "216/";
 // Ozono (O3)
 O3Enable = true;
-O3Key = "219/";
+O3Key = "217/";
 
 /* ParametrosMetereologicos */
 
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "220/";
-
+TMIKey = "218/";
 
 getEstationInfo();
 getEstationtemplate();
