--- a/firebase/28079059.html
+++ b/firebase/28079059.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
@@ -139,40 +140,40 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "221/";
+NOKey = "219/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "222/";
+NO2Key = "220/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "223/";
+NOXKey = "221/";
 // Ozono (O3)
 O3Enable = true;
-O3Key = "224/";
+O3Key = "222/";
 
 /* ParametrosMetereologicos */
 
 // Radiación Ultravioleta (UV)
 UVEnable = true;
-UVKey = "225/";
+UVKey = "223/";
 // Velocidad del Viento (VV)
 VVEnable = true;
-VVKey = "226/";
+VVKey = "224/";
 // Dirección del Viento (DD)
 DDEnable = true;
-DDKey = "227/";
+DDKey = "225/";
 // Temperatura Media (TMP)
 TMPEnable = true;
-TMPKey = "228/";
+TMPKey = "226/";
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "229/";
+TMIKey = "227/";
 // Humedad Relativa (HR)
 HREnable = true;
-HRKey = "230/";
+HRKey = "228/";
 // Presión Barométrica (PRB)
 PRBEnable = true;
-PRBKey = "231/";
+PRBKey = "229/";
 
 getEstationInfo();
 getEstationtemplate();
