--- a/firebase/28079060.html
+++ b/firebase/28079060.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
@@ -139,28 +140,28 @@ var estacionUrl = "http://www.mambiente.munimadrid.es/opencms/opencms/calaire/co
 
 // Monóxido de Nitrógeno (NO)
 NOEnable = true;
-NOKey = "234/";
+NOKey = "232/";
 // Dióxido de Nitrógeno (NO2)
 NO2Enable = true;
-NO2Key = "235/";
+NO2Key = "233/";
 // Partículas en suspensión (<10)
 PS10Enable = true;
-PS10Key = "236/";
+PS10Key = "234/";
 // Óxidos de Nitrógeno totales (NOx)
 NOXEnable = true;
-NOXKey = "237/";
+NOXKey = "235/";
 // Ozono (O3)
 O3Enable = true;
-O3Key = "238/";
+O3Key = "236/";
 
 /* ParametrosMetereologicos */
 
 // Temperatura Mínima (TMI)
 TMIEnable = true;
-TMIKey = "239/";
+TMIKey = "237/";
 // Presión Barométrica (PRB)
 PRBEnable = true;
-PRBKey = "240/";
+PRBKey = "238/";
 
 getEstationInfo();
 getEstationtemplate();
