--- a/firebase/index.html
+++ b/firebase/index.html
@@ -100,15 +100,17 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div> 
       <div id="allDatos" class="row"></div>
       <div class="row"> 
           <div class="col-lg-12">
               <h3>Construido con:</h3>
           </div>
       </div>
+      <div id="allConstruido_responsive"></div>
       <div id="allConstruido" class="row"></div>
     </div> <!-- FIN container-principal -->
-<div id="allFooter"></div>     
+<div id="allFooter"></div>    
 <div id="allModals"></div>    
 
 
@@ -134,7 +136,9 @@
 $('#allModals').html(allModals);
 $('#allFooter').html(allFooter);
 $('#allConstruido').html(allConstruido);
+$('#allConstruido_responsive').html(allConstruido_responsive);
 $('#allDatos').html(allDatos);
+$('#allDatos_responsive').html(allDatos_responsive);
 $('#allEstaciones').html(allEstaciones);
 $('#allContamintantesMedidos').html(allContamintantesMedidos);
 $('#allParametrosMetereologicos').html(allParametrosMetereologicos);
