--- a/firebase/28079016.html
+++ b/firebase/28079016.html
@@ -100,6 +100,7 @@
               <h3>Datos e Imágenes:</h3>
           </div>
       </div>
+      <div id="allDatos_responsive"></div>       
       <div id="allDatos" class="row"></div>
     </div> <!-- FIN container-principal -->
 <div id="allFooter"></div>     
